<package format="2">
  <name>lsd_slam_core</name>
  <version>1.0.0</version>
  <description>
     Large-Scale Direct Monocular SLAM
  </description>
  <maintainer email="aditya.dhawale@shield.ai">Aditya Dhawale</maintainer>
  <license>see http://vision.in.tum.de/lsdslam </license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>sensor_msgs</depend>
  <depend>roslib</depend>
  <depend>rosbag</depend>
  <depend>lsd_slam_viewer</depend>
</package> 
