<package format="2">
  <name>lsd_slam_viewer</name>
  <version>1.0.0</version>
  <description>
     3D Viewer for LSD-SLAM.
  </description>
  <maintainer email="aditya.dhawale@shield.ai">Aditya Dhawale</maintainer>
  <license>see http://vision.in.tum.de/lsdslam</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>message_generation</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>sensor_msgs</depend>
  <depend>roslib</depend>
  <depend>rosbag</depend>
</package>


